Removed a bunch of redundant local files.

--- a/CircuitBreaker/src/CircuitBreaker.csproj
+++ b/CircuitBreaker/src/CircuitBreaker.csproj
@@ -38,7 +38,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Circuit.cs" />
-    <Compile Include="Command.cs" />
+    <Compile Include="Commands\Command.cs" />
     <Compile Include="Exceptions\CircuitBreakerOpenException.cs" />
     <Compile Include="Exceptions\CircuitBreakerTimeoutException.cs" />
     <Compile Include="Interfaces\ICircuit.cs" />
